// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollableContainer component renders correctly 1`] = `
<View
  style={
    Array [
      Object {},
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {},
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <Text>
        Hi
      </Text>
    </View>
  </RCTScrollView>
</View>
`;

exports[`ScrollableContainer component renders with a centered content 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {},
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "flexGrow": 1,
          "justifyContent": "center",
        },
        Object {},
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <Text>
        Hi
      </Text>
    </View>
  </RCTScrollView>
</View>
`;
